# EMReady2

./: .gitignore  EMReady.sh  EMReady2.sh  LICENSE  README.md  bimcunet.py  frn.py  install.txt  interp.py  interp3d.py  pred.py  pyproject.toml  requirements.txt  requirements_mamba.txt  utils.py
bimamba_ssm/: __init__.py
bimamba_ssm/modules/: mamba_simple.py
bimamba_ssm/ops/: selective_scan_interface.py
bimamba_ssm/ops/triton/: layer_norm.py  selective_state_update.py
bimamba_ssm/utils/: generation.py  hf.py
emready/: __init__.py  __main__.py
emready/commands/: __init__.py  predict.py
emready/io/: mrc.py
emready/models/: __init__.py  bimcunet.py
emready/utils/: checkpoints.py  chunks.py  interp3d.py  structures.py
model_weights/: README.md
