[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emready"
dynamic = ["version"]
description = "EMReady inference package"
license = {text = "MIT"}
authors = [
    {name = "Hong Cao"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
emready = "emready.commands.predict:main"

[tool.setuptools.dynamic]
version = {attr = "emready.__version__"}

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["emready*"]
exclude = ["tests*"]

